manifest/server1-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server1
  # namespace: testing
  labels:
    app: server1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: server1
    spec:
      containers:
        - name: server1
          image: muhammadtalhasarwar/server1repo:latest
          ports:
            - containerPort: 3000
