manifest/server1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server1
  # namespace: testing
spec:
  selector:
    app: server1
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
